src/discoveryTool/css/DiscoveryTool.css
/* Discovery Tool styling */

@font-face {
    font-family: "OpenSans";
    src: url("../../lib/infusion/lib/fonts/OpenSans-Light.ttf");
    font-weight: 300;
    font-style: normal;    
}

@font-face {
    font-family: 'OpenSans';
    src:url('../../lib/infusion/lib/fonts/OpenSans-Regular.ttf');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: 'OpenSans';
    src:url('../../lib/infusion/lib/fonts/OpenSans-Semibold.ttf');
    font-weight: 600;
    font-style: normal;
}

/* General */
@font-face {
    font-family: 'DiscoveryToolIcons'; 
    src:url('../fonts/GPII-DiscoveryTool.eot?#iefix') format('embedded-opentype'), 
         url('../fonts/GPII-DiscoveryTool.eot'), 
         url('../fonts/GPII-DiscoveryTool.ttf');
}

.fl-uiOptions-discoveryTool {
    background-color: #6f7b80;
    overflow: hidden;
}

.fl-uiOptions-discoveryTool .fl-uiOptions {
    font-family: 'OpenSans',"Myriad Pro", Helvetica, Arial, sans-serif;    
}

/* Panels */
.fl-uiOptions-discoveryTool .fl-uiOptions-panels {
    text-align: center;
    margin: 0;
}

.fl-uiOptions-discoveryTool .fl-uiOptions-panels li.fl-uiOptions-panel {
    display: inline-block;
    width: 10em;
    margin: 0 1em 0 0;
    padding:0;    
    color: #fff;
    vertical-align: middle;    
}

/* Buttons */
.fl-uiOptions-discoveryTool .fl-uiOptions-panel button {
    width: 9em;
    height: 9em;
    background-color: #fff;
    border: 2px solid #fff;
    border-radius: 0.25em;
    cursor: pointer;
    margin: 0;
    overflow: hidden;
}

/* Labels */
.fl-uiOptions-discoveryTool .fl-uiOptions-panel label {
    border: none;
    box-shadow: none;  
    text-transform: lowercase;  
    color: #adb4b7;
    display: block;
    font-size: 1.4em;
}

/* Preference actions */
.fl-uiOptions-discoveryTool .fl-uiOptions-panel button:hover+label {
    color: #fff;   
}

.fl-uiOptions-discoveryTool .fl-uiOptions-panel button:focus {
    border: 2px solid #ffcc00;
    outline: 0;
}

.fl-uiOptions-discoveryTool .fl-uiOptions-panel .fl-icon-check {
    visibility: hidden;
    
    background-color: #363c40;
    color: #fff;    
    border: 1px solid 363c40;
    border-radius: 1em;
    height: 1em;
    width: 1em;
    font-size: 2.5em;
    margin-left: 3em;
    margin-top: -0.6em;
    display: inline-block;    
}

.fl-uiOptions-discoveryTool .fl-uiOptions-panel button[aria-pressed="true"] {
    background-color: #ffcc00;
}
.fl-uiOptions-discoveryTool .fl-uiOptions-panel button[aria-pressed="true"]+div.fl-icon-check {
    visibility: visible;
}


/* Try something new */
.fl-uiOptions-discoveryTool .fl-uiOptions-panels li.fl-uiOptions-panel .fl-discoveryTool-try {
    color: #ffcc00;
    font-size: 1.5em;
    font-weight: bold;
}

/* Font Icons */
.fl-icon-discover, .fl-icon-arrow, .fl-icon-check {
    font-family: 'DiscoveryToolIcons';
}

.icon-discover:before {
    color: #fff;
    content: "\a013";
}

.icon-discover:after {
    content: "\a012";
    position: relative;
    left: -1.2em;
}

.fl-icon-arrow:after {
    content: "\a016";
}

.fl-icon-check:before {
    /*content: "\a015"; */
    content: "\a014";    
}
/*.fl-icon-check:after {
    content: "\a014";
    position: relative;
    left: -1em;
}*/


.fl-discoveryTool-panel-icon {
	font-family: 'DiscoveryToolIcons';
	font-size: 7em;
	width: 2em;
	display: block;
	margin: 0 auto;
	position: relative;
	left: 0.11em;
}

.fl-discoveryTool-panel-icon:before {
	color: #fff;
}

.fl-discoveryTool-panel-icon:after {
    color: #333;
}

.fl-discoveryTool-icon-high-contrast:before {
	content: "\a009";
}

.fl-discoveryTool-icon-high-contrast:after {
	content: "\a008";
	position: relative;
	left: -1em;
}

.fl-discoveryTool-icon-simplify:before {
	content: "\a005";
}

.fl-discoveryTool-icon-simplify:after {
	content: "\a004";
	position: relative;
	left: -1em;
}

.fl-discoveryTool-icon-speak:before {
	content: "\a003";
}

.fl-discoveryTool-icon-speak:after {
	content: "\a002";
	position: relative;
	left: -1em;
}

.fl-discoveryTool-icon-low-contrast:before {
	content: "\a007";
}

.fl-discoveryTool-icon-low-contrast:after {
	content: "\a006";
	position: relative;
	left: -1em;
}

.fl-discoveryTool-icon-increase-size:before {
	content: "\a011";
}

.fl-discoveryTool-icon-increase-size:after {
	content: "\a010";
	position: relative;
	left: -1em;
}

